# code_snippet

./: README.md
cpu/: README.md
cpu/LINUX/: Makefile  simpleDlfcn.c
cpu/MPI/: Makefile  hello.cpp  readme.txt
cpu/Numerical_Analysis/Cholesky/: Cholesky.cpp  Makefile
cpu/Numerical_Analysis/Conjugate_Gradient/: Conjugate_Gradient.cpp  Makefile  readme.txt
cpu/Numerical_Analysis/GMRES_Krylov/: GMRES_Krylov.cpp  Makefile
cpu/Numerical_Analysis/GMRES_precondKrylov/: Makefile
cpu/Numerical_Analysis/Gaussian_Elimination/: Gaussian_Elimination.cpp  Makefile
cpu/Numerical_Analysis/Gaussian_Newton/: Makefile
cpu/Numerical_Analysis/Gaussian_Seridel/: Gaussian_Seridel.cpp  Makefile
cpu/Numerical_Analysis/Jacobi/: Jacobi.cpp  Makefile
cpu/Numerical_Analysis/LU/: LU.cpp  Makefile
cpu/Numerical_Analysis/Levenberg_Marquardt/: Levenberg_Marquardt.cpp  Normal_LM.h
cpu/Numerical_Analysis/Newton/: Makefile  Newton.cpp
cpu/Numerical_Analysis/Normal/: Makefile  Normal.cpp  Normal.h
cpu/Numerical_Analysis/PA_LU/: Makefile  PA_LU.cpp
cpu/Numerical_Analysis/QR_GramSchmidt/: Makefile  QR_GramSchmidt.cpp
cpu/Numerical_Analysis/QR_GramSchmidtUpdated/: Makefile  QR_GramSchmidtUpdated.cpp
cpu/Numerical_Analysis/QR_HouseHolder/: Makefile  QR_HouseHolder.cpp
cpu/Numerical_Analysis/SOR/: Makefile  SOR.cpp
cpu/Numerical_Analysis/gMRES_precondKrylov/: GMRES_precondKrylov.cpp
cpu/Numerical_Analysis/gaussian_newton/: Gaussian_Newton.cpp  Normal.h
cpu/Numerical_Analysis/levenberg_marquardt/: Makefile
cpu/cmake/1simpleCondBuild/: CMakeLists.txt  Message.hpp
cpu/cmake/1simpleControlFlow/: CMakeLists.txt  display1.cpp  display2.cpp  display2.hpp  main.cpp
cpu/cmake/1simpleControllCompilerFlags/: CMakeLists.txt  display.cpp  main.cpp
cpu/cmake/1simpleLangStandard/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Factory.hpp  animal-farm.cpp
cpu/cmake/1simpleLinkStaticShared/: helloWorld.cpp
cpu/cmake/1simpleSpecifyCompiler/: CMakeLists.txt  readme.txt
cpu/cmake/1simpleSwitchBuildType/: CMakeLists.txt  readme.txt
cpu/cmake/2simpleCheckInstruction/: CMakeLists.txt  config.h.in  main.cpp
cpu/cmake/2simpleCheckOS/: CMakeLists.txt  hello-world.cpp
cpu/cmake/2simpleEigenVec/: CMakeLists.txt  linear-algebra.cpp
cpu/cmake/3simpleDetectExternal/: CMakeLists.txt
cpu/cmake/3simpleDetectPython/: hello-embedded-python.c
cpu/cmake/hello_world/: CMakeLists.txt  helloWorld.cpp  readme.txt
cpu/cmake/simpleCondBuild/: CMakeLists.txt  Message.cpp
cpu/cmake/simpleLinkStaticShared/: CMakeLists.txt  readme.txt
cpu/cmake/simpleSpecifyCompiler/: CMakeLists.txt
cpu/cmake/simpleSwitchBuildType/: readme.txt
cpu/opencv/samples/: Makefile  read_image.cpp
cpu/pthread_create/: Makefile  pthread_barrier.c  pthread_cond.c  pthread_create.c  pthread_exit.c  pthread_mutex.c  pthread_semaphores  pthread_semaphores.c
cpu/selectNth/: qsort_par.cpp
cuda/3_Imaging/histogram/: Makefile
cuda/app_design_dev/ILP/: ILP.cu
cuda/app_design_dev/xorNM/: CalcError.h  nelmin.h  xorNM.cu
cuda/samples/: cudaTensorCoreGemm
cuda/samples/0_UnifiedMemoryStreams/: Makefile
cuda/samples/0_asyncAPI/: asyncAPI.cu
cuda/samples/0_clock/: Makefile
cuda/samples/0_cppIntegration/: Makefile  main.cpp
cuda/samples/0_cppOverload/: cppOverload.cu
cuda/samples/0_cudaOpenMP/: Makefile
cuda/samples/0_deviceQuery/: deviceQuery.cpp
cuda/samples/0_deviceQueryDriver/: Makefile  deviceQueryDriver.cpp
cuda/samples/0_fp16ScalarProduct/: Makefile  fp16ScalarProduct.cu
cuda/samples/0_matrixMul/: Makefile
cuda/samples/0_matrixMulCUBLAS/: Makefile
cuda/samples/0_simpleAtomicIntrinsics/: Makefile  simpleAtomicIntrinsics.cu  simpleAtomicIntrinsics_kernel.cuh
cuda/samples/0_simpleCallback/: Makefile  multithreading.cpp  multithreading.h
cuda/samples/0_simpleCooperativeGroups/: simpleCooperativeGroups.cu
cuda/samples/0_simpleDynamicParallel/: Makefile
cuda/samples/0_simpleMPI/: simpleMPI.cpp  simpleMPI.h
cuda/samples/0_simpleMultiCopy/: Makefile
cuda/samples/0_simpleMultiGPU/: Makefile  simpleMultiGPU.cu
cuda/samples/0_simpleOccupancy/: Makefile  simpleOccupancy.cu
cuda/samples/0_simpleP2P/: simpleP2P.cu
cuda/samples/0_simpleSeparateCompilation/: simpleDeviceLibrary.cu  simpleDeviceLibrary.cuh  simpleSeparateCompilation.cu
cuda/samples/0_simpleStreams/: Makefile
cuda/samples/0_simpleTemplates/: Makefile  simpleTemplates.cu
cuda/samples/0_simpleVoteIntrinsics/: Makefile  simpleVoteIntrinsics.cu
cuda/samples/0_simpleZeroCopy/: Makefile
cuda/samples/0_template/: template.cu  template_cpu.cpp
cuda/samples/0_uniquePtr/: uniquePtr.cu
cuda/samples/UnifiedMemoryStreams/: Makefile  UnifiedMemoryStreams.cu
cuda/samples/asyncAPI/: asyncAPI.cu
cuda/samples/clock/: clock.cu
cuda/samples/clock_nvrtc/: Makefile  clock.cpp  clock_kernel.cu  clock_nvrtc.cpp
cuda/samples/cppIntegration/: Makefile  cppIntegration.cu  cppIntegration_gold.cpp  main.cpp
cuda/samples/cppOverload/: Makefile  kernel_overload.cuh
cuda/samples/cudaOpenMP/: cudaOpenMP.cu
cuda/samples/deviceQuery/: Makefile  deviceQuery.cpp
cuda/samples/deviceQueryDriver/: deviceQueryDriver.cpp
cuda/samples/fp16ScalarProduct/: Makefile  fp16ScalarProduct.cu
cuda/samples/matrixMul/: matrixMul.cu
cuda/samples/matrixMulCUBLAS/: matrixMulCUBLAS.cpp
cuda/samples/simpleAssert/: Makefile  simpleAssert  simpleAssert.cu
cuda/samples/simpleAtomicIntrinsics/: Makefile  simpleAtomicIntrinsics.cu  simpleAtomicIntrinsics_cpu.cpp
cuda/samples/simpleCallback/: Makefile  multithreading.cpp  multithreading.h  simpleCallback.cu
cuda/samples/simpleConstant/: Makefile  rayTracing_w.cu  rayTracing_wo.cu
cuda/samples/simpleCooperativeGroups/: Makefile  simpleCooperativeGroups.cu
cuda/samples/simpleDynamicParallel/: Makefile  cdpSimplePrint.cu
cuda/samples/simpleDynamicParallelQuicksort/: Makefile  cdpSimpleQuicksort.cu
cuda/samples/simpleIPC/: Makefile  simpleIPC.cu
java/1simpleHello/: HelloJava.java  Makefile
python/: beam_search.py  min_edit_distance.py  viterbi.py
(+27 files in other folders)
